--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 api.client.reach5.baseUrl=
+api.client.reach5.clientId=
+api.client.reach5.clientSecret=
+api.client.reach5.timeout=5000
+api.client.reach5.token-url=
